[package]
name = "yastr"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4", features = ["ws"] }
clap = { version = "4.5.3", features = ["derive"] }
futures = "0.3.30"
indoc = "2.0.5"
nostr = "0.29.0"
serde = "1.0.197"
serde_json = "1.0.114"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "sync"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }


[dependencies.sqlx]
# workaround until https://github.com/launchbadge/sqlx/pull/3148 is merged/released:
version = "0.7.4"
features = ["sqlite", "runtime-tokio"]
git = "https://github.com/nfnitloop/sqlx.git"
branch = "bump-sqlite3"
