[package]
name = "yastr"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4", features = ["ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
base64 = "0.22.0"
clap = { version = "4.5.3", features = ["derive"] }
futures = "0.3.30"
indoc = "2.0.5"
mime_guess = "2"
nostr = "0.30.0"
serde = "1.0.197"
serde_json = "1.0.114"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "sync"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }


[dependencies.sqlx]
# workaround until https://github.com/launchbadge/sqlx/pull/3148 is merged/released:
version = "0.7.4"
features = ["sqlite", "runtime-tokio"]
git = "https://github.com/nfnitloop/sqlx.git"
branch = "bump-sqlite3"
